yaml/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:266735805454:certificate/b895e0e3-c9fd-4382-8b0b-8e8964718a72
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    external-dns.alpha.kubernetes.io/hostname: app.eks2048ayoub.online
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80
